--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.2.0-beta1",
     "framer-motion": "^6.4.1",
     "next": "12.1.6",
+    "nodemailer": "^6.7.7",
     "npm": "^8.12.1",
     "react": "18.1.0",
     "react-background-video-player": "^1.1.8",
@@ -29,7 +30,8 @@
     "react-toastify": "^9.0.5",
     "react-transition-group": "^4.4.2",
     "slick-carousel": "^1.8.1",
-    "video-react": "^0.15.0"
+    "video-react": "^0.15.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
